--- a/index.html
+++ b/index.html
@@ -3,8 +3,15 @@
         <title>Bhavana</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     </head>
     <body style="background-color:darkcyan;">
+        <div class="container">
+           <div class="row">
+              <div class="col-sm-12 col-md-6">Column 1</div>
+              <div class="col-sm-12 col-md-6">Column 2</div>
+            </div>
+        </div>
         <style>
             body {
                 font-family: Arial, sans-serif;
@@ -122,6 +129,7 @@
                 <i class="fab fa-linkedin linkedin-icon"></i>
             </a>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
 
