--- a/index.html
+++ b/index.html
@@ -14,9 +14,8 @@
       }
 
       img {
-        position: relative;
-        top: 50px;
-        left: 100px;
+        display: block;
+        margin: 20px auto;
         border-radius: 50%;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
         width: 150px;
@@ -24,24 +23,22 @@
       }
 
       h1 {
-        position: relative;
-        top: 250px;
-        left: 30px;
+        text-align: center;
         font-size: 2rem;
         color: yellowgreen;
+        margin-top: 10px;
       }
 
       h2 {
-        position: relative;
-        top: 100px;
-        left: 600px;
+        text-align: center;
         font-size: 1.8rem;
         color: darkmagenta;
+        margin-top: 20px;
       }
 
       p {
-        position: relative;
-        left: 600px;
+        max-width: 90%;
+        margin: 0 auto;
         font-family: serif;
         font-size: 18px;
         line-height: 1.5;
@@ -49,16 +46,15 @@
       }
 
       hr {
-        position: relative;
-        left: 600px;
-        width: 100%;
+        margin: 20px auto;
+        width: 80%;
         max-width: 500px;
         border: 1px solid yellowgreen;
       }
 
       .additional-info {
-        position: relative;
-        left: 600px;
+        max-width: 90%;
+        margin: 0 auto;
         font-family: serif;
         font-size: 16px;
         color: white;
@@ -68,14 +64,14 @@
 
       .navbar {
         position: fixed;
-        top: 10px;
-        right: 10px;
+        bottom: 0;
+        left: 0;
+        right: 0;
         display: flex;
-        flex-direction: row;
-        gap: 15px;
-        background-color: rgba(0, 0, 0, 0.2);
-        padding: 10px 20px;
-        border-radius: 10px;
+        justify-content: space-around;
+        background-color: rgba(0, 0, 0, 0.6);
+        padding: 10px;
+        z-index: 1000;
       }
 
       .navbar a {
@@ -100,41 +96,35 @@
         color: lightskyblue;
       }
 
-      /* Responsive Design for Mobile */
+      /* Responsive Design for Tablets */
       @media screen and (max-width: 768px) {
         img {
           width: 120px;
           height: 120px;
-          top: 30px;
-          left: 20px;
         }
 
         h1 {
-          top: 50px;
-          left: 20px;
           font-size: 1.5rem;
         }
 
         h2 {
-          left: 20px;
-          top: 80px;
           font-size: 1.4rem;
         }
 
-        p, .additional-info, hr {
-          left: 20px;
+        p, .additional-info {
           font-size: 16px;
         }
 
-        hr {
-          width: 90%;
+        .navbar {
+          padding: 10px;
         }
 
-        .additional-info {
-          margin-top: 10px;
+        .navbar a {
+          font-size: 1rem;
         }
       }
 
+      /* Responsive Design for Mobile */
       @media screen and (max-width: 480px) {
         img {
           width: 100px;
@@ -154,15 +144,13 @@
         }
 
         .navbar {
-          top: 0;
-          right: 0;
-          width: 100%;
-          justify-content: space-around;
-          background-color: rgba(0, 0, 0, 0.5);
+          flex-direction: column;
+          padding: 15px 0;
         }
 
         .navbar a {
           font-size: 1rem;
+          padding: 5px;
         }
       }
     </style>
@@ -202,5 +190,6 @@
     </div>
   </body>
 </html>
+
 
 
