--- a/index.html
+++ b/index.html
@@ -1,126 +1,162 @@
-<html>
-    <head>
-        <title>Bhavana</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    </head>
-    <body style="background-color:darkcyan;">
-        <style>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Bhavana</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <style>
+        body {
+            background-color: darkcyan;
+            font-family: Arial, sans-serif;
+            color: white;
+        }
 
-            body {
-                font-family: Arial, sans-serif;
-                margin: 0;
-                padding: 0;
-            }
-            p {
-                position: fixed;
-                left: 600px;
-                bottom: 300px;
-                text-align: justify;
-                font-family: serif;
-                font-size: 20px;
-                line-height: 1.5;
-            }
-            img {
-                position: fixed;
-                top: 50px;
-                left: 100px;
-                border-radius: 50%;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-            }
+        .container {
+            max-width: 1100px;
+            margin: auto;
+            padding: 20px;
+        }
+
+        .profile-section {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            gap: 30px;
+            padding: 20px;
+        }
+
+        .profile-section img {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .text-content {
+            flex: 1;
+            max-width: 600px;
+        }
+
+        h1 {
+            color: yellowgreen;
+            font-size: 2rem;
+        }
+
+        h2 {
+            color: darkmagenta;
+            font-size: 1.8rem;
+        }
+
+        p {
+            font-size: 1.1rem;
+            line-height: 1.5;
+            text-align: justify;
+        }
+
+        hr {
+            border: 1px solid yellowgreen;
+            width: 100%;
+            margin: 15px 0;
+        }
+
+        .additional-info {
+            font-size: 1rem;
+            line-height: 1.5;
+            text-align: justify;
+        }
+
+        .navbar-custom {
+            background-color: rgba(0, 0, 0, 0.3);
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+        .navbar-custom .nav-link {
+            color: white;
+            font-size: 1.2rem;
+            transition: color 0.3s ease;
+        }
+
+        .navbar-custom .nav-link:hover {
+            color: lightblue;
+        }
+
+        .linkedin-icon {
+            font-size: 1.5rem;
+            transition: color 0.3s ease;
+        }
+
+        .linkedin-icon:hover {
+            color: rgb(2, 5, 7);
+        }
+
+        @media (max-width: 768px) {
             h1 {
-                position: fixed;
-                top: 250px;
-                left: 30px;
-                font-size: 30px;
-                color: yellowgreen;
+                font-size: 1.8rem;
             }
+
             h2 {
-                position: fixed;
-                top: 100px;
-                left: 600px;
-                font-size: 30px;
-                color: darkmagenta;
+                font-size: 1.5rem;
             }
-            hr {
-                position: fixed;
-                left: 600px;
-                bottom: 250px;
-                width: 500px;
-                border: 1px solid yellowgreen;
-            }
-            .additional-info {
-                position: fixed;
-                left: 600px;
-                bottom: 200px;
-                font-family: serif;
-                font-size: 18px;
-                color: white;
-                line-height: 1.5;
-            }
-            .navbar {
-                position: fixed;
-                top: 10px;
-                right: 10px;
-                display: flex;
-                flex-direction: row;
-                gap: 15px;
-                background-color: rgba(0, 0, 0, 0.2);
-                padding: 10px 20px;
-                border-radius: 10px;
-            }
-            .navbar a {
-                text-decoration: none;
-                color: rgb(235, 230, 233);
-                font-size: 1.2rem;
-                padding: 8px;
-                transition: color 0.3s ease;
-            }
-            .navbar a:hover {
-                color: lightblue;
-            }
-            .linkedin-icon {
-                color: rgb(235, 230, 233);
-                font-size: 1.5em;
-                transition: color 0.3s ease;
-            }
-            .linkedin-icon:hover {
-                color: lightskyblue;
-            }
-        </style>
 
-        <h1>Chandrakantham Bhavana</h1>
-        <h2>Self Introduction :</h2>
-        <p>
-            Hello! My name is C. Bhavana, and I am currently focused on completing my <br>undergraduate degree (B.Tech) and securing a job in the software industry.
-            <br><br>
-            This goal drives me to explore new ideas and take on challenges that push my boundaries in meaningful ways. <br>This portfolio highlights my current work and the steps I am taking toward achieving my ambitions.
-            <br><br>
-            Each project reflects my dedication to growth and discovery, as I navigate new challenges and opportunities. <br>Feel free to explore my work and check out the links for more information on what I am currently working on.
-        </p>
+            p, .additional-info {
+                font-size: 1rem;
+            }
+        }
+    </style>
+</head>
+<body>
 
-        <!-- Horizontal line below the paragraph -->
-        <hr>
-
-        <!-- Additional info below the horizontal line -->
-        <div class="additional-info" style="position: fixed; left: 600px; bottom: 100px; text-align: justify; font-family: serif; font-size: 20px; line-height: 1.5;">
-            This portfolio is a culmination of my learning and experience in software development, <br>
-            showcasing projects that reflect my skills in programming, creativity, and problem-solving. <br>
-            I aim to continually expand my knowledge in areas such as machine learning, web development, <br>
-            and other cutting-edge technologies to stay at the forefront of the industry.
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/feed/" target="_blank">
+                            <i class="fab fa-linkedin linkedin-icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
+    </nav>
 
-        <img src="pic.jpg" width="200" height="200" alt="Profile Picture">
-
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="About me.html">About Me</a>
-            <a href="Academic Qualification.html">Academic Qualification</a>
-            <a href="Skills.html">Skills</a>
-            <a href="certificates.html">Certificates</a>
-            <a href="Contact.html">Contact</a>
-            <a href="https://www.linkedin.com/feed/" target="_blank">
-                <i class="fab fa-linkedin linkedin-icon"></i>
-            </a>
+    <div class="container mt-5">
+        <div class="profile-section">
+            <img src="pic.jpg" alt="Profile Picture">
+            <div class="text-content">
+                <h1>Chandrakantham Bhavana</h1>
+                <h2>Self Introduction :</h2>
+                <p>
+                    Hello! My name is C. Bhavana, and I am currently focused on completing my undergraduate degree (B.Tech) and securing a job in the software industry.
+                    <br><br>
+                    This goal drives me to explore new ideas and take on challenges that push my boundaries in meaningful ways. This portfolio highlights my current work and the steps I am taking toward achieving my ambitions.
+                    <br><br>
+                    Each project reflects my dedication to growth and discovery, as I navigate new challenges and opportunities. Feel free to explore my work and check out the links for more information on what I am currently working on.
+                </p>
+                <hr>
+                <div class="additional-info">
+                    This portfolio is a culmination of my learning and experience in software development, showcasing projects that reflect my skills in programming, creativity, and problem-solving.
+                    <br><br>
+                    I aim to continually expand my knowledge in areas such as machine learning, web development, and other cutting-edge technologies to stay at the forefront of the industry.
+                </div>
+            </div>
         </div>
-    </body>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
