--- a/Academic Qualification.html
+++ b/Academic Qualification.html
@@ -1,104 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Academic Qualification</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <style>
-            body {
-                background-color: darkcyan;
-                margin: 0;
-                padding: 0;
-                font-family: 'Georgia', serif;
-                color: #333;
-            }
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Academic Qualification</title>
+    
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    
+    <style>
+        body {
+            background-color: darkcyan;
+            font-family: 'Georgia', serif;
+            color: white;
+        }
+
+        .qualification-section {
+            background-color: rgb(179, 176, 176);
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        h1 {
+            color: brown;
+            text-align: left;
+            margin-top: 20px;
+            font-size: 2rem;
+        }
+
+        h2 {
+            color: darkmagenta;
+            font-size: 1.5rem;
+        }
+
+        p {
+            font-size: 1.1rem;
+            line-height: 1.5;
+            color: black;
+        }
+
+        /* Custom navbar styling */
+        .navbar-custom {
+            background-color: rgba(0, 0, 0, 0.2);
+            padding: 10px;
+            border-radius: 10px;
+        }
+
+        .navbar-custom .nav-link {
+            color: white;
+            font-size: 1.1rem;
+            transition: color 0.3s ease;
+        }
+
+        .navbar-custom .nav-link:hover {
+            color: lightblue;
+        }
+
+        .linkedin-icon {
+            font-size: 1.5rem;
+            transition: color 0.3s ease;
+        }
+
+        .linkedin-icon:hover {
+            color: rgb(1, 14, 21);
+        }
+
+        @media (max-width: 768px) {
             h1 {
-                text-align: left;
-                margin-top: 50px;
-                font-size: 2.5em;
-                color: brown;
+                font-size: 1.8rem;
             }
-            .qualification-section {
-                max-width: 800px;
-                margin: 50px auto;
-                padding: 20px;
-                background-color: rgb(179, 176, 176);
-                border-radius: 10px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            h2 {
+                font-size: 1.3rem;
             }
-            .qualification-section h2 {
-                font-size: 1.8em;
-                color: darkmagenta;
-                margin-bottom: 10px;
+            p {
+                font-size: 1rem;
             }
-            .qualification-section p {
-                font-size: 1.2em;
-                line-height: 1.8;
-                margin-bottom: 30px;
-            }
-            .navbar {
-                position: fixed;
-                top: 10px;
-                right: 10px;
-                display: flex;
-                gap: 20px;
-                padding: 10px 20px;
-                background-color: rgba(0, 0, 0, 0.2);
-                font-size: 1.8em;
-                border-radius: 10px;
-            }
-            .navbar a {
-                text-decoration: none;
-                color: white;
-                font-size: 1.2rem;
-                padding: 5px;
-                transition: color 0.3s ease;
-            }
-            .navbar a:hover {
-                color: blue;
-            }
-            .linkedin-icon {
-                color: white;
-                font-size: 1.5em;
-                transition: color 0.3s ease;
-            }
-            .linkedin-icon:hover {
-                color: lightskyblue;
-            }
-        </style>
-    </head>
-    <body>
+        }
+    </style>
+</head>
+<body>
+
+    <!-- Navigation Bar -->
+    <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/feed/" target="_blank">
+                            <i class="fab fa-linkedin linkedin-icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Page Content -->
+    <div class="container mt-5 pt-5">
         <h1>Academic Qualification :</h1>
-        <div class="qualification-section">
+
+        <div class="qualification-section mt-4 mx-auto col-md-8">
             <h2>Graduation</h2>
-            <p>
-                <strong>B.Tech</strong> <br>
-                SVR Engineering College <br>
-                Percentage: 78%
-            </p>
-            <h2>Intermediate</h2>
-            <p>
-                <strong>Rao's Junior College</strong> <br>
-                Percentage: 51%
-            </p>
-            <h2>SSC</h2>
-            <p>
-                <strong>Swami Vivekanandha Vidhyalaya</strong> <br>
-                Percentage: 97%
-            </p>
+            <p><strong>B.Tech</strong> <br> SVR Engineering College <br> Percentage: 78%</p>
         </div>
 
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="About me.html">About me</a>
-            <a href="Academic Qualification.html">Academic Qualification</a>
-            <a href="Skills.html">Skills</a>
-            <a href="certificates.html">Certificates</a>
-            <a href="Contact.html">Contact</a>
-            <a href="https://www.linkedin.com/feed/">
-                <i class="fab fa-linkedin linkedin-icon"></i>
-            </a>
+        <div class="qualification-section mt-4 mx-auto col-md-8">
+            <h2>Intermediate</h2>
+            <p><strong>Rao's Junior College</strong> <br> Percentage: 51%</p>
         </div>
-    </body>
+
+        <div class="qualification-section mt-4 mx-auto col-md-8">
+            <h2>SSC</h2>
+            <p><strong>Swami Vivekanandha Vidhyalaya</strong> <br> Percentage: 97%</p>
+        </div>
+    </div>
+
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
