--- a/certificates.html
+++ b/certificates.html
@@ -1,90 +1,102 @@
-<!doctype html>
-<html>
-    <head>
-        <title>Certificates</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-        <style>
-            body{
-              background-color: darkcyan;
-             margin:0;
-             padding:0;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Certificates</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: darkcyan;
             font-family: serif;
-            }
-            h1{
-             color:brown;
-             text-align:left;
-            }
-            .certificate-container {
-                display: flex;
-                justify-content: center;
-                align-items: center;
-                flex-wrap: wrap;
-                padding: 30px;
-            }
-            .certificate-container img {
-                margin: 20px;
-                border: 5px solid goldenrod;
-                border-radius: 10px;
-                box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-                transition: transform 0.3s ease, box-shadow 0.3s ease;
-            }
-            .certificate-container img:hover {
-                transform: scale(1.05);
-                box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-            }
-            .navbar {
-                position: fixed;
-                top: 10px;
-                right: 10px;
-                display: flex;
-                flex-direction: row;
-                gap: 20px;
-                padding: 10px 20px;
-                background-color: rgba(0, 0, 0, 0.2);
-                border-radius: 10px;
-            }
-            .navbar a {
-                text-decoration: none;
-                color:white;
-                font-size: 1.2rem;
-                padding: 5px 10px;
-                border-radius: 5px;
-                transition: color 0.3s ease, background-color 0.3s ease;
-            }
-            .navbar a:hover {
-                color: white;
-                background-color: blue;
-            }
-            .linkedin-icon {
-                color: white;
-                font-size: 1.5em;
-                margin-left: 10px;
-                transition: color 0.3s ease;
-            }
-            .linkedin-icon:hover {
-                color: lightskyblue;
-            }
-        </style>
-    </head>
-    <body>
-        <h1>Certificates</h1>
-        <div class="certificate-container">
-            <img src="c1.jpg" alt="Certificate 1" height="200px">
-            <img src="c2.jpg" alt="Certificate 2" height="200px">
-            <img src="c3.jpg" alt="Certificate 3" height="200px">
-            <img src="c4.jpg" alt="Certificate 4" height="200px">
-            <img src="c5.jpg" alt="Certificate 5" height="200px">
+        }
+        h1 {
+            color: brown;
+            text-align: left;
+            padding: 20px;
+        }
+        .certificate-container img {
+            width: 100%;
+            max-width: 250px;
+            margin: 10px;
+            border: 5px solid goldenrod;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+        .certificate-container img:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+        .navbar-custom {
+            background-color: rgba(0, 0, 0, 0.2);
+            border-radius: 10px;
+        }
+        .navbar-custom .nav-link {
+            color: white;
+            font-size: 1.2rem;
+            transition: color 0.3s ease, background-color 0.3s ease;
+        }
+        .navbar-custom .nav-link:hover {
+            color: rgb(26, 19, 241);
+            border-radius: 5px;
+        }
+        .linkedin-icon {
+            color: white;5
+            font-size: 1.5em;
+            transition: color 0.3s ease;
+        }
+        .linkedin-icon:hover {
+            color: rgb(2, 10, 15);
+        }
+    </style>
+</head>
+<body>
+    <nav class="navbar navbar-expand-lg navbar-dark fixed-top navbar-custom p-2">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
+                    <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://www.linkedin.com/feed/">
+                            <i class="fab fa-linkedin linkedin-icon"></i>
+                        </a>
+                    </li>
+                </ul>
+            </div>
         </div>
-        <div class="navbar">
-            <a href="index.html">Home</a>
-            <a href="About me.html">About me</a>
-            <a href="Academic Qualification.html">Academic Qualification</a>
-            <a href="Skills.html">Skills</a>
-            <a href="certificates.html">Certificates</a>
-            <a href="Contact.html">Contact</a>
-            <a href="https://www.linkedin.com/feed/">
-                <i class="fab fa-linkedin linkedin-icon"></i>
-            </a>
+    </nav>
+    
+    <div class="container mt-5 pt-5">
+        <h1>Certificates :</h1>
+        <div class="row certificate-container justify-content-center">
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
+                <img src="c1.jpg" alt="Certificate 1">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
+                <img src="c2.jpg" alt="Certificate 2">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
+                <img src="c3.jpg" alt="Certificate 3">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
+                <img src="c4.jpg" alt="Certificate 4">
+            </div>
+            <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
+                <img src="c5.jpg" alt="Certificate 5">
+            </div>
         </div>
-    </body>
+    </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
 </html>
