--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css">
     <style>
         body {
-            background-color: darkcyan;
+            background-color: #0a2525;
             font-family: Arial, sans-serif;
             color: white;
         }
@@ -42,12 +42,12 @@
         }
 
         h1 {
-            color: yellowgreen;
+            color: #2fb4bb;
             font-size: 2rem;
         }
 
         h2 {
-            color: darkmagenta;
+            color: rgb(189, 31, 189);
             font-size: 1.8rem;
         }
 
@@ -55,6 +55,8 @@
             font-size: 1.1rem;
             line-height: 1.5;
             text-align: justify;
+            font-family:serif;
+            color:rgb(255, 250, 250)
         }
 
         hr {
@@ -70,9 +72,9 @@
         }
 
         .navbar-custom {
-            background-color: rgba(0, 0, 0, 0.3);
+            background-color: #2fb4bb;
             padding: 10px;
-            border-radius: 10px;
+            height: 50px;
         }
 
         .navbar-custom .nav-link {
@@ -82,7 +84,7 @@
         }
 
         .navbar-custom .nav-link:hover {
-            color: lightblue;
+            color: rgb(0, 5, 7);
         }
 
         .linkedin-icon {
