--- a/Academic Qualification.html
+++ b/Academic Qualification.html
@@ -11,39 +11,42 @@
     
     <style>
         body {
-            background-color: darkcyan;
+            background-color: #0a2525;
             font-family: 'Georgia', serif;
             color: white;
         }
 
         .qualification-section {
-            background-color: rgb(179, 176, 176);
+            background-color:  #5b767f;
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
         h1 {
-            color: brown;
+            color: #2fb4bb;
             text-align: left;
             margin-top: 20px;
             font-size: 2rem;
+            font-family: serif;
         }
 
         h2 {
-            color: darkmagenta;
+            color: rgb(246, 5, 246);
             font-size: 1.5rem;
+            font-family: serif;
         }
 
         p {
             font-size: 1.1rem;
             line-height: 1.5;
             color: black;
+            font-family: serif;
         }
 
         /* Custom navbar styling */
         .navbar-custom {
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: #2fb4bb;
             padding: 10px;
             border-radius: 10px;
         }
@@ -55,7 +58,7 @@
         }
 
         .navbar-custom .nav-link:hover {
-            color: lightblue;
+            color: rgb(3, 14, 17);
         }
 
         .linkedin-icon {
@@ -91,8 +94,8 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link active" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
