--- a/index.html
+++ b/index.html
@@ -44,11 +44,13 @@
         h1 {
             color: #2fb4bb;
             font-size: 2rem;
+            font-family: serif;
         }
 
         h2 {
             color: rgb(189, 31, 189);
             font-size: 1.8rem;
+            font-family: serif;
         }
 
         p {
@@ -69,6 +71,7 @@
             font-size: 1rem;
             line-height: 1.5;
             text-align: justify;
+            font-family: serif;
         }
 
         .navbar-custom {
@@ -114,15 +117,15 @@
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <div class="container">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About me.html">About Me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">Profile</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
