--- a/Skills.html
+++ b/Skills.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background-color: darkcyan;
+            background-color: #0a2525;
             font-family: 'Georgia', serif;
             color: #333;
         }
@@ -16,16 +16,19 @@
             text-align: left;
             margin-top: 50px;
             font-size: 2.5em;
-            color: brown;
+            color: #2fb4bb;
+            font-family: serif;
         }
         .skills-section {
-            background-color: rgb(195, 193, 193);
+            background-color: #5b767f;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
+            color: white;
         }
         .skills-section h2 {
-            color: darkmagenta;
+            color: rgb(246, 5, 246);
+            font-family: serif;
         }
         .skills-section ul li:before {
             content: "\2022";
@@ -36,22 +39,25 @@
             margin-left: -1em;
         }
         .navbar-custom {
-            background-color: rgba(0, 0, 0, 0.2);
+            background-color: #2fb4bb;
             border-radius: 10px;
         }
-        .navbar a {
-            color: white !important;
-            transition: color 0.3s ease;
+        .navbar-custom .nav-link {
+            color: white;
+            font-size: 1.2rem;
+            transition: color 0.3s ease, background-color 0.3s ease;
         }
-        .navbar a:hover {
-            color: blue !important;
+        .navbar-custom .nav-link:hover {
+            color: rgb(5, 4, 18);
+            border-radius: 5px;
         }
         .linkedin-icon {
             color: white;
+            font-size: 1.5em;
             transition: color 0.3s ease;
         }
         .linkedin-icon:hover {
-            color: rgb(13, 14, 15);
+            color: rgb(2, 10, 15);
         }
     </style>
 </head>
@@ -87,7 +93,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                     <li class="nav-item"><a class="nav-link" href="About me.html">About me</a></li>
-                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Academic Qualification</a></li>
+                    <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
                     <li class="nav-item"><a class="nav-link" href="Contact.html">Contact</a></li>
