--- a/About me.html
+++ b/About me.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
-            background-color: #0a2525;
+            background-color: #f4f7fc;
             font-family: 'Georgia', serif;
             color: #333;
         }
@@ -16,49 +16,54 @@
         h1 {
             margin-top: 70px;
             font-size: 2.5rem;
-            color: #2fb4bb;
+            color: #002b5b;
             text-align: left;
             font-family: serif;
         }
-        p{
+
+        p {
             text-align: justify;
-            color: white;
+            color: #444;
             font-family: serif;
             font-size: 1.1rem;
         }
+
         .content {
-            background-color: #5b767f;
+            background: linear-gradient(to bottom, #ffffff, #dde8ff);
             border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
         }
 
         .content h2 {
-            color: rgb(246, 5, 246);
+            color: #004085;
             font-size: 1.8rem;
             text-align: left;
         }
 
         .navbar-custom {
-            background-color: #2fb4bb;
+            background-color: #002b5b;
             border-radius: 10px;
         }
+
         .navbar-custom .nav-link {
             color: white;
             font-size: 1.2rem;
             transition: color 0.3s ease, background-color 0.3s ease;
         }
+
         .navbar-custom .nav-link:hover {
-            color: rgb(5, 4, 18);
+            color: #ffc107;
             border-radius: 5px;
         }
+
         .linkedin-icon {
             color: white;
             font-size: 1.5em;
             transition: color 0.3s ease;
         }
+
         .linkedin-icon:hover {
-            color: rgb(2, 10, 15);
+            color: #ffc107;
         }
 
         @media (max-width: 768px) {
@@ -72,14 +77,6 @@
 
             .content p {
                 font-size: 1rem;
-            }
-
-            .navbar-custom {
-                padding: 8px 15px;
-            }
-
-            .linkedin-icon {
-                font-size: 1.2rem;
             }
         }
     </style>
@@ -119,19 +116,19 @@
                     </p>
                     <h2>Strengths</h2>
                     <p>
-                        <b>-</b>Confidence, <br>
-                        <b>-</b>Analytical skills, <br>
-                        <b>-</b>Critical thinking, <br>
-                        <b>-</b>Ability to handle multitasking, <br>
+                        <b>-</b> Self Confidence, <br>
+                        <b>-</b> Analytical and critical thinking, <br>
+                        <b>-</b> Fast Learner, <br>
+                        <b>-</b> Ability to handle multitasking, <br>
                         <b>-</b> Positive attitude, <br>
-                        <b>-</b>Time management.
+                        <b>-</b> Time management.
                     </p>
                     <h2>Hobbies</h2>
                     <p>
-                        <b>-</b>Browsing the internet, <br>
-                        <b>-</b>Drawing, <br>
-                        <b>-</b>Listening to music, <br>
-                        <b>-</b>Learning about new things.
+                        <b>-</b> Browsing the internet, <br>
+                        <b>-</b> Drawing, <br>
+                        <b>-</b> Listening to music, <br>
+                        <b>-</b> Learning about new things.
                     </p>
                 </div>
             </div>
