--- a/Skills.html
+++ b/Skills.html
@@ -8,38 +8,38 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
-            background-color: #0a2525;
+            background-color: #f4f7fc;
             font-family: 'Georgia', serif;
             color: #333;
         }
         h1 {
             text-align: left;
-            margin-top: 50px;
+            margin-top: 100px;
             font-size: 2.5em;
-            color: #2fb4bb;
+            color: #002b5b;
             font-family: serif;
         }
         .skills-section {
-            background-color: #5b767f;
+            background: linear-gradient(to bottom, #ffffff, #dde8ff);
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             padding: 20px;
-            color: white;
+            color: #444;
         }
         .skills-section h2 {
-            color: rgb(246, 5, 246);
+            color: #004085;
             font-family: serif;
         }
         .skills-section ul li:before {
             content: "\2022";
-            color: darkmagenta;
+            color: #004085;
             font-weight: bold;
             display: inline-block; 
             width: 1em;
             margin-left: -1em;
         }
         .navbar-custom {
-            background-color: #2fb4bb;
+            background-color: #002b5b;
             border-radius: 10px;
         }
         .navbar-custom .nav-link {
@@ -48,7 +48,7 @@
             transition: color 0.3s ease, background-color 0.3s ease;
         }
         .navbar-custom .nav-link:hover {
-            color: rgb(5, 4, 18);
+            color: #ffc107;
             border-radius: 5px;
         }
         .linkedin-icon {
@@ -57,7 +57,7 @@
             transition: color 0.3s ease;
         }
         .linkedin-icon:hover {
-            color: rgb(2, 10, 15);
+            color: #ffc107;
         }
     </style>
 </head>
@@ -76,8 +76,9 @@
             <h2>Technical Skills</h2>
             <ul class="list-unstyled">
                 <li>Basics of C-Programming and Data Structures</li>
-                <li>Basics of Python Programming and Data Science</li>
+                <li>Python Programming </li>
                 <li>Basics of Machine Learning and Deep Learning</li>
+                <li>Basics of MongoDB</li>
                 <li>Basics of MySQL</li>
                 <li>HTML and CSS</li>
             </ul>
@@ -92,7 +93,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="About me.html">About me</a></li>
+                    <li class="nav-item"><a class="nav-link" href="About me.html">Profile</a></li>
                     <li class="nav-item"><a class="nav-link" href="Academic Qualification.html">Credentials</a></li>
                     <li class="nav-item"><a class="nav-link" href="Skills.html">Skills</a></li>
                     <li class="nav-item"><a class="nav-link" href="certificates.html">Certificates</a></li>
