--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,7 @@
 
     <style>
         body {
-            background-color: #0a2525;
+            background-color: #f4f7fc;
             font-family: 'Georgia', serif;
             color: #333;
         }
@@ -18,28 +18,29 @@
             text-align: left;
             margin-top: 30px;
             font-size: 2.2em;
-            color: #2fb4bb;
-            font-family: se;
-        }
-        p{
-            text-align: justify;
+            color: #002b5b;
             font-family: serif;
         }
+        p {
+            text-align: justify;
+            font-family: serif;
+            color: #444;
+        }
         .contact-container {
-            background-color: #5b767f;
+            background: linear-gradient(to bottom, #ffffff, #dde8ff);
             padding: 20px;
             border-radius: 10px;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             font-size: 1.2em;
             line-height: 1.8;
             text-align: center;
-            color: white;
+            color: #333;
         }
         .contact-container b {
-            color: rgb(246, 5, 246);
+            color: #004085;
         }
         .navbar-custom {
-            background-color: #2fb4bb;
+            background-color: #002b5b;
             border-radius: 10px;
         }
         .navbar-custom .nav-link {
@@ -48,7 +49,7 @@
             transition: color 0.3s ease, background-color 0.3s ease;
         }
         .navbar-custom .nav-link:hover {
-            color: rgb(5, 4, 18);
+            color: #ffc107;
             border-radius: 5px;
         }
         .linkedin-icon {
@@ -57,7 +58,7 @@
             transition: color 0.3s ease;
         }
         .linkedin-icon:hover {
-            color: rgb(2, 10, 15);
+            color: #ffc107;
         }
     </style>
 </head>
@@ -67,7 +68,7 @@
     <nav class="navbar navbar-expand-lg navbar-custom fixed-top">
         <div class="container-fluid">
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>5
+                <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                 <ul class="navbar-nav">
