--- a/certificates.html
+++ b/certificates.html
@@ -81,19 +81,19 @@
         <h1>Certificates :</h1>
         <div class="row certificate-container justify-content-center">
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="images/c1.jpg" alt="Certificate 1">
+                <img src="c1.jpg" alt="Certificate 1">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="images/c2.jpg" alt="Certificate 2">
+                <img src="c2.jpg" alt="Certificate 2">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="images/c3.jpg" alt="Certificate 3">
+                <img src="c3.jpg" alt="Certificate 3">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="images/c4.jpg" alt="Certificate 4">
+                <img src="c4.jpg" alt="Certificate 4">
             </div>
             <div class="col-6 col-sm-4 col-md-3 col-lg-2 d-flex justify-content-center">
-                <img src="images/c5.jpg" alt="Certificate 5">
+                <img src="c5.jpg" alt="Certificate 5">
             </div>
         </div>
     </div>
